--- a/.github/workflows/run-performance.yml
+++ b/.github/workflows/run-performance.yml
@@ -45,6 +45,6 @@ jobs:
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git add performance.csv carteira_anterior.csv
+          git add data/performance.csv data/carteira_anterior.csv
           git commit -m "Atualizar resultados do script de performance" || echo "Nenhuma mudança para commitar"
           git push
