--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ flake8 = "^7.1.1"
 isort = "^5.13.2"
 taskipy = "^1.14.1"
 pre-commit = "^4.0.1"
+pandas = "^2.2.3"
+fundamentus = "^0.2.0"
 
 
 [build-system]
