--- a/.github/workflows/run-performance.yml
+++ b/.github/workflows/run-performance.yml
@@ -3,8 +3,8 @@ name: Executar Script de Performance
 on:
   #workflow_dispatch:  # Permite execução manual
   push:
-  #schedule:
-  #  - cron: '0 0 * * 1'  # Executa toda segunda-feira à meia-noite UTC
+  schedule:
+    - cron: '0 3,15 * * *'
 
 permissions:
   contents: write
