--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,66 @@
-fundamentus
-pandas
-numpy
-streamlit
+asttokens==3.0.0
+attrs==24.3.0
+black==24.10.0
+cattrs==24.1.2
+certifi==2024.12.14
+cfgv==3.4.0
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+debugpy==1.8.12
+decorator==5.2.1
+distlib==0.3.9
+executing==2.2.0
+filelock==3.16.1
+flake8==7.1.1
+fundamentus==0.2.0
+identify==2.6.5
+idna==3.10
+ipykernel==6.29.5
+ipython==9.0.1
+ipython-pygments-lexers==1.1.1
+isort==5.13.2
+jedi==0.19.2
+jupyter-client==8.6.3
+jupyter-core==5.7.2
+lxml==5.3.0
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+nodeenv==1.9.1
+numpy==2.2.1
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pathspec==0.12.1
+pexpect==4.9.0
+platformdirs==4.3.6
+pre-commit==4.0.1
+prompt-toolkit==3.0.50
+psutil==6.1.1
+ptyprocess==0.7.0
+pure-eval==0.2.3
+pyarrow==19.0.1
+pycodestyle==2.12.1
+pyflakes==3.2.0
+pygments==2.19.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+pyyaml==6.0.2
+pyzmq==26.2.1
+requests==2.32.3
+requests-cache==1.2.1
+six==1.17.0
+stack-data==0.6.3
+tabulate==0.9.0
+taskipy==1.14.1
+tomli==2.2.1
+tornado==6.4.2
+traitlets==5.14.3
+tzdata==2024.2
+url-normalize==1.4.3
+urllib3==2.3.0
+virtualenv==20.28.1
+wcwidth==0.2.13
