--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ taskipy = "^1.14.1"
 pre-commit = "^4.0.1"
 pandas = "^2.2.3"
 fundamentus = "^0.2.0"
+ipykernel = "^6.29.5"
+pyarrow = "^19.0.1"
 
 
 [build-system]
